--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div id="success-message">
         <h1>YEEESSSS ! Je savais que tu dirais oui ! 😍✨</h1>
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHIybTVqZzR4bmZ0ZzR4bmZ0ZzR4bmZ0ZzR4bmZ0ZzR4bmZ0ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/K77qTCZ0Rshx9m8j2x/giphy.gif" width="200">
+        <img src="./1000026393.jpg" width="200">
     </div>
 
     <script>
