--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div id="success-message">
         <h1>YEEESSSS ! Je savais que tu dirais oui ! 😍✨</h1>
-        <img src="./1000026393.jpg" width="200">
+        <img src="https://wineblood974.github.io/valentine/1000026393.jpg" width="200">
     </div>
 
     <script>
